@@ -1,3 +1,8 @@
+2009-02-26  Vladimir Tzankov  <vtzankov@gmail.com>
+
+	* eval.d (interpret_bytecode_ JMP) [MULTITHREAD]: preserve mv_space
+	in case of suspend request
+
 2009-02-25  Sam Steingold  <sds@gnu.org>
 
 	* modules/readline/readline.lisp: use (:return-type nil) instead
